# surfiam-graph-vis

./: .gitignore  LICENSE  README.md  README_developers.md  draw_graph.py  graph_config.toml  graph_web_editor.py  pyproject.toml  select_full_graph.html  select_json_graph.html  webtool.py
.github/workflows/: linter.yml  pytest.yml
configs/: graph_config.toml  sram_config.toml
data/: output.json
example_graphs/: sram_examples.toml
gravis_html/: app_graph.html  example.html  federflow.html  streamlit_graph.html  subgraph.html  test.html
html/: all_nodes_graph.html  exported_graph.html  plain_graph.html
sramviz/: __init__.py  __main__.py  draw_graph.py  graph_from_sram_json.py  utils.py
src/: draw_graph.py  graph_from_sram_json.py  utils.py
surfiamviz/: __init__.py  __main__.py  graph_from_config.py  graph_from_sram_json.py  utils.py  webtool.py
surfiamviz/webutils/: all_nodes.html  createtab.py  exampletab.py  exploretab.py  utils.py  welcometab.py
tests/: conftest.py  test_config.py  test_sram.py
tests/testdata/: config.toml  sram.json
workflows/: linter.yml
