[project]
name = "sram-graph-vis"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
  { name = "Christine Staiger", email = "staigerchristine@gmail.com>" },
  { name = "Logan Ayliffe", email = "logan.ayliffe@surf.nl" },
  { name = "Gerben Venekamp", email = "gerben.venekamp@surf.nl" },
]
dependencies = ["networkx>=3.4.2", "pyvis==0.3.2", "matplotlib>=3.9.2"]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false


[tool.black]
line-length = 110


[tool.basedpyright]
pythonPlatform = "Linux"
include = []
exclude = []
venvPath = "."
venv = ".venv"
# importStrategy = "fromEnvironment"
pythonVersion = "3.13"
typeCheckingMode = "basic"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]

# Same as Black.
line-length = 110
indent-width = 4

# Assume Python 3.9
target-version = "py313"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
